[tool.poetry]
name = "health"
version = "0.1.0"
description = "use FAO data in website"
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
Flask = "^3.0.2"
bpython = "^0.24"
fastapi = {extras = ["standard"], version = "^0.115.5"}
elasticsearch = "^8.16.0"
starlette = "^0.41.3"
rapidfuzz = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
